Comment input overflow fixed

--- a/user_area/styles/comments.css
+++ b/user_area/styles/comments.css
@@ -95,7 +95,9 @@
 }
 
 .commentForm input[type='text'] {
-  min-width: 98%;
+  width: 50em;
+  max-width: 97%;
+  height: 3em;
   font-size: 0.8em;
 }
 
